samples/_failures_safe/1761428218_f1b617_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bcd80a91.c: In function ‘main’:
./samples/SAFE/__tmp_bcd80a91.c:151:28: error: expected ‘)’ at end of input
  151 |     if (scanf("%d", &choice
      |              ~             ^
      |                            )
./samples/SAFE/__tmp_bcd80a91.c:151:5: error: expected declaration or statement at end of input
  151 |     if (scanf("%d", &choice
      |     ^~
